# library

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.engineering-team/: current.txt
.engineering-team/runs/manual-20260610-154616/: evaluation-report.md  improvement-plan.md
.engineering-team/runs/manual-20260614T125641Z/: improvement-plan.md
.engineering-team/runs/manual-20260616T072256Z/: improvement-plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: README.md  admin.md  api.md  architecture.md  ask.md  deployment.md  frontend-view-principles.md  frontend.md  ingestion.md  jobs-and-notifications.md  mcp.md  migration.md  roadmap.md
docs/archive/: frontend-govuk.md
docs/benchmarks/: 260610-ocr-benchmark.md
docs/runbooks/: deploy.md  email-triage.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-06-13-dashboard-metadata-preferences.md  2026-06-13-mosaic-reskin.md  2026-06-14-tile-preview-mode.md  2026-06-15-dashboard-search-filters.md  2026-06-21-extraction-quality.md  2026-06-21-markdown-layer.md  2026-06-22-conversational-ask.md  2026-06-22-cross-browser-pdf-preview.md  2026-06-22-document-series-comparative.md  2026-07-06-document-comments-island-ask-input.md  2026-07-06-freeform-cards-action-dock.md  2026-07-20-phone-columns-tile-date-label.md
docs/superpowers/specs/: 2026-06-13-dashboard-metadata-preferences-design.md  2026-06-13-mosaic-reskin-design.md  2026-06-14-tile-preview-mode-design.md  2026-06-15-dashboard-search-filters-design.md  2026-06-21-extraction-quality-design.md  2026-06-21-markdown-layer-design.md  2026-06-22-conversational-ask-design.md  2026-06-22-cross-browser-pdf-preview-design.md  2026-06-22-document-series-comparative-design.md  2026-06-24-upload-selected-files-preview-design.md  2026-07-02-fx-seeding-and-ui-polish-design.md  2026-07-06-document-comments-island-ask-input-design.md  2026-07-06-freeform-cards-action-dock-design.md  2026-07-17-sweep-encrypted-backfill-design.md  2026-07-20-phone-columns-tile-date-label-design.md
frontend/: README.md  eslint.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
frontend/e2e/: admin-views.spec.ts  ask-page-citation.spec.ts  charts.spec.ts  compose.e2e.yml  held-emails.spec.ts  jobs-view.spec.ts  library.spec.ts  markdown-reader.spec.ts  notes.spec.ts  pdf-preview.spec.ts  projects.spec.ts  recently-deleted.spec.ts  responsive.spec.ts  review-quality.spec.ts  review-queue.spec.ts  saved-views.spec.ts  tags-editing.spec.ts  tile-border-colour.spec.ts  topics-readonly.spec.ts  tsconfig.json
frontend/e2e/fixtures/: note-fixture.md
frontend/public/: manifest.webmanifest
frontend/scripts/: check-assets.mjs  coverage-summary.mjs
frontend/src/: App.vue  main.ts
journal/: 260610-project-inception.md  260610-w10-list-search-upload.md  260610-w11-detail-edit.md  260610-w12-consume-watcher.md  260610-w13-mcp-server.md  260610-w3-storage-ingestion-jobs.md  260610-w4-ocr-pipeline.md  260610-w5-ocr-benchmark.md  260610-w6-claude-extraction.md  260610-w7-rest-api.md  260610-w8-auth.md  260610-w9-design-system.md  260611-preview-inline-and-wide-layout.md  260611-v0.1.0-build-complete.md  260611-w14-email-ingest.md  260611-w15-paperless-importer.md  260611-w16-mobile-pwa.md  260611-w17-deployment-docs.md  260612-dashboard-grid-search-modal.md  260612-importer-storage-paths.md  260613-dashboard-metadata-preferences.md  260613-mosaic-reskin.md  260614-ci-build-once-promote.md  260614-dashboard-mobile-ux-polish.md  260614-dashboard-tile-elevation.md  260614-per-user-canvas-tone.md  260614-tile-preview-mode.md  260615-dashboard-search-filters.md  260615-document-detail-redesign.md  260616-document-detail-metadata-groups.md  260616-semantic-ask-layer.md  260621-extraction-quality.md  260621-markdown-layer.md  260622-conversational-ask.md  260622-cross-browser-pdf-preview.md  260622-document-series.md  260623-jobs-view-and-live-notifications.md  260623-pushover-notifications-and-email-attribution.md  260623-upload-error-and-summary-backfill.md  260623-webapp-jobs-ocr-summary-fixes.md  (+82 more)
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_procrastinate_schema.py  0003_user_preferences.py  0004_document_chunks.py  0005_ask_logs.py  0006_extraction_quality.py  0007_markdown_layer.py  0008_ask_threads.py  0009_series_insights.py  0010_general_document_store.py  0011_projects.py  0012_topics_fts.py  0013_notes.py  0014_user_is_admin.py  0015_series_overrides_and_fx.py  0016_recipient_field.py  0017_seed_quote_kind.py  0018_series_meta_overrides.py  0019_authored_series.py  0020_recipient_user_link.py  0021_series_suggestions.py  0022_document_comments.py  0023_deleted_at_index.py  0024_saved_views.py  0025_fts_page_markdown.py  0026_held_emails.py  0027_email_selection_traces.py  0028_matters.py
scripts/: backfill_ask_titles.py  coverage_summary.py  deploy.sh  ocr_benchmark.py
tests/: conftest.py  docx_fixtures.py  ocr_fixtures.py  test_admin_api.py  test_api_ask.py  test_api_comments.py  test_ask_document_write.py  test_ask_get_document.py  test_auth.py  test_authored_series_api.py  test_backfill_ask_titles.py  test_budget_backfill.py  test_charts_api.py  test_charts_suggestions_api.py  test_charts_write_paths.py  test_chunker.py  test_cli.py  test_config.py  test_consume.py  test_coverage_summary.py  test_currency_admin.py  test_documents_api.py  test_documents_api_markdown.py  test_documents_api_series.py  test_docx.py  test_email_ingest.py  test_email_label.py  test_embed_comments.py  test_embedding_client.py  test_embedding_pipeline.py  test_events_sse.py  test_extraction_apply.py  test_extraction_eval.py  test_extraction_extractor.py  test_extraction_judge.py  test_extraction_repair.py  test_extraction_schema.py  test_extraction_validation.py  test_fx.py  test_fx_admin.py  (+50 more)
tests/markdown/: test_apply.py  test_apply_born_digital.py  test_generator.py  test_renderer.py
(+227 files in other folders)
