[project]
name = "library"
version = "0.1.0"
description = "Self-hosted document archive"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.8",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pillow>=12.2.0",
    "pillow-heif>=1.4.0",
    "filetype>=1.2.0",
    "python-multipart>=0.0.32",
    "procrastinate>=3.8.1",
    "psycopg[binary]>=3.2",
    "ocrmypdf>=17.5.0",
    "pypdfium2>=5.9.0",
    "img2pdf>=0.6.3",
    "opencv-python-headless>=4.13.0.92",
    "rapidocr>=3.8.2",
    "onnxruntime>=1.26.0",
    "anthropic>=0.109.1",
    "pwdlib[argon2]>=0.2",
    "typer>=0.15",
    "fastmcp>=3.4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.26",
    "coverage>=7.6",
    "httpx>=0.28",
    "ruff>=0.11",
    "testcontainers[postgres]>=4.14.2",
]

[project.scripts]
library = "library.cli:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
# rapidocr declares a hard dependency on opencv-python (the GUI build, which
# needs libGL at runtime); we ship opencv-python-headless instead. The
# impossible marker removes the GUI build from the resolution everywhere;
# both packages provide the same `cv2` module.
override-dependencies = ["opencv-python ; sys_platform == 'never'"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that need Docker (ephemeral Postgres via testcontainers)",
    "slow_ocr: real OCR engine runs (tesseract/ocrmypdf binaries, RapidOCR model download)",
]

[tool.coverage.run]
source = ["src/library"]
